change ArticleController, ArticleRepository, ArticleService, add DTOs